[gd_scene load_steps=3 format=3 uid="uid://8ppjgl2cg7mv"]

[ext_resource type="Script" path="res://main/main.gd" id="1_kpj04"]
[ext_resource type="AudioStream" uid="uid://cnb4biegnp0os" path="res://main/coin.wav" id="2_xw156"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kpj04")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 339.0
offset_top = 44.0
offset_right = -339.0
offset_bottom = -44.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Fischbrot Man"
horizontal_alignment = 1
uppercase = true

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Click Me!"

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_xw156")

[connection signal="button_down" from="VBoxContainer/Button" to="." method="_on_button_button_down"]
